# EbbRT-node-app

./: .gitignore  .gitmodules  CMakeLists.txt  CmdLineArgs.cc  CmdLineArgs.h  FileSystem.capnp  FileSystem.cc  FileSystem.h  Makefile  Node.cc  NodeScript.h  README.md  StaticEbbIds.h  benchlist  benchmarks.mk  config.h  goodbench.js  mkbench  mkjstargets  navierstokes.js  nodebuild  nodeconfigure  nullbench.js  raytrace.js  test.cc
baremetal/: Node.cc  bench.dts  ebbrtbenchcfg.h  ebbrtbenchnetcfg.h  ebbrtcfg.h
hosted/: Node.cc
linux/: bench.js  mkbench
scripts/: badbench.js  crypto.js  deltablue.js  earleyboyer.js  regexp.js  richards.js  splay.js  static_server.js
